<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="ExtraText,UselessParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/activity_main__topStudents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/stud_list"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_main__rv_students"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/activity_main__add_student_button"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/activity_main__topStudents"
            tools:listitem="@layout/student_item" />

        <Button
            android:id="@+id/activity_main__add_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/add_student"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/activity_main__line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/gray"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal" />

        <TextView
            android:id="@+id/activity_main__student_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/student"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal" />

        <Button
            android:id="@+id/activity_main__delete_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:enabled="false"
            android:text="@string/delete_student"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start" />

        <Button
            android:id="@+id/activity_main__save_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:enabled="false"
            android:text="@string/save_student"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_studentAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="75dp"
            app:layout_constraintBottom_toTopOf="@+id/activity_main__delete_student_button"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/activity_main__student_info">

            <ImageView
                android:id="@+id/activity_main__studentPicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@color/lightGray"
                android:contentDescription="@string/student_avatar"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/activity_main__studentSurName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/activity_main__studentName"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal_start"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/activity_main__studentName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/activity_main__checkGender"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/activity_main__studentSurName"
            tools:ignore="Autofill" />

        <CheckBox
            android:id="@+id/activity_main__checkGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="false"
            android:text="@string/gender"
            app:layout_constraintBottom_toTopOf="@id/activity_main__save_student_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/activity_main__studentName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>